apache2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
        - name: apache2-container
          image: httpd
          ports:
            - containerPort: 80
