apache2-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: apache2-clusterip
spec:
  selector:
    app: apache2
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
