customapp-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: customapp-clusterip
spec:
  selector:
    app: customapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
