ingressrules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: apache2-clusterip
                port:
                  number: 8080
          - path: /custom
            pathType: Prefix
            backend:
              service:
                name: customapp-clusterip
                port:
                  number: 8080
